--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,18 @@
-[*.{js,jsx,mjs,cjs,ts,tsx,mts,cts,vue}]
+root = true
+
+[*]
 charset = utf-8
-indent_size = 2
-indent_style = space
 end_of_line = lf
+indent_size = 4
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
+
+[*.{yml,yaml}]
+indent_size = 2
+
+[docker-compose.yml]
+indent_size = 4
